--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,10 @@
 Django==2.2.19
 pytz==2022.1
 sqlparse==0.4.2
+django-debug-toolbar==3.2.4
+mixer==7.1.2
+Pillow==8.3.1
+requests==2.26.0
+six==1.16.0
+sorl-thumbnail==12.7.0
+Faker==12.0.1
